src/test/resources/amyc/typer/failing/ArithError2.amy
object ArithError2
  true - 1
end ArithError2
